# malina-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: 01-document-loader.ipynb  02-question-answer.ipynb  03-chat-bot.ipynb  04-chat-ui.ipynb  example.ipynb
